# CPP

./: CMakeLists.txt  CXXModules.cmake  DerivedVehicle.cpp  DerivedVehicle.hpp  Vehicle.cpp  Vehicle.hpp  main.cpp  toolchain_gnu  toolchain_llvm
External_Project.xcodeproj/: project.pbxproj
External_Project.xcodeproj/xcuserdata/rhage.xcuserdatad/xcschemes/: xcschememanagement.plist
XCode_CPP.xcodeproj/: project.pbxproj
XCode_CPP.xcodeproj/xcuserdata/rhage.xcuserdatad/xcschemes/: xcschememanagement.plist
cpp20/: CMakeLists.txt  consumer.cpp  cpp20.cpp  cpp20.ixx
modules/: CMakeLists.txt
modules/cpp20/: CMakeLists.txt  cpp20.cpp  cpp20_impl.cpp
parts/: CMakeLists.txt
parts/include/: Tire.hpp  Wheel.hpp
parts/src/: Tire.cpp  Wheel.cpp
thread/: CMakeLists.txt
thread/include/: Runner.hpp
thread/src/: Runner.cpp
